K8s-Configs/order-service-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: order-service
  labels: 
    app: order-service
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: order-service
  template: 
    metadata: 
      labels: 
        app: order-service
    spec: 
      containers:
      - name: order-service
        image: gcr.io/microservices-k8s-demo-1/sm/order-service:1.0
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /v1
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30002
    targetPort: 8080
  type: NodePort
