K8s-Configs/order-service-k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-service-k8s-ingress
spec: 
  rules:
  - host: smorder.com
    http:
      paths:
      - path: /
        backend:
          serviceName: order-service
          servicePort: 8080
